Closed Bug 660676 Opened 14 years ago Closed 14 years ago

nsSize/nsIntSize copy constructors are causing me to lose my sanity while debugging, and also for those types not to be a POD

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla7

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

Details

Attachments

(1 file)

These copy ctors call the compiler generated counterparts in their base classes. There's no point in them existing, as far as I can see.
Attached patch Patch (v1)Splinter Review
Assignee: nobody → ehsan
Status: NEW → ASSIGNED
Attachment #536131 - Flags: review?(roc)
Comment on attachment 536131 [details] [diff] [review] Patch (v1) Review of attachment 536131 [details] [diff] [review]: -----------------------------------------------------------------
Attachment #536131 - Flags: review?(roc) → review+
Whiteboard: fixed-in-cedar
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Flags: in-testsuite-
OS: Linux → All
Hardware: x86_64 → All
Resolution: --- → FIXED
Whiteboard: fixed-in-cedar
Target Milestone: --- → mozilla7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: