Bug 660676 - Remove the copy constructor for nsSize and nsIntSize; r=roc